# sric

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: element.rs  generate_sri.rs  main.rs  mime_ext.rs  node_iter.rs  parse_html.rs  response_ext.rs  write_html.rs
