[package]
name = "sric"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["default", "derive"]}
clio = { version = "0.3.5", features = ["clap-parse"] }
ureq = { version = "2.9.7", features = ["tls", "native-certs"] }
mime = "0.3.17"
mime_guess = "2.0.5"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
anyhow = "1.0.86"
lazy_static = "1.5.0"
base64 = "0.22.1"
sha2 = "0.10.8"
url = "2.5.2"